feat: implement some frontend routes
